...
                                        <rect key="frame" x="80" y="0.0" width="120" height="90"/>
                                        <color key="backgroundColor" name="Color3"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="90" id="9K5-4q-QnY"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                        <state key="normal" title="Pick" image="Gridy-name-small-grey">
                                            <color key="titleColor" red="0.32523280380000003" green="0.31422492860000001" blue="0.28234854339999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="20"/>
                                            </userDefinedRuntimeAttribute>
...
                        <subviews>
                            <view multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IHC-9F-P6l">
                                <rect key="frame" x="32" y="165.5" width="256" height="257.5"/>
                                <subviews>
                                    <imageView clearsContextBeforeDrawing="NO" multipleTouchEnabled="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XiM-pM-zvL">
                                        <rect key="frame" x="-32" y="-165.5" width="320" height="568"/>
                                        <accessibility key="accessibilityConfiguration" identifier="PickedImage">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                                <real key="value" value="-500"/>
                                            </userDefinedRuntimeAttribute>
...
                                <string key="text">Adjust the puzzle image:
zoom, rotate, reposition</string>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
                                <color key="textColor" name="Color6"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3XA-vT-kLV" userLabel="Start" customClass="RoundButton" customModule="Gridy" customModuleProvider="target">
                                <rect key="frame" x="62" y="456" width="196" height="82"/>
                                <color key="backgroundColor" name="Color1"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="60"/>
                                <state key="normal" title="  Start  ">
                                    <color key="titleColor" white="1" alpha="0.81319563356164382" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <color key="titleShadowColor" name="labelColor" catalog="System" colorSpace="catalog"/>
...
                                                        <real key="value" value="0.5"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                            </imageView>
                                            <button opaque="NO" tag="18" contentMode="center" restorationIdentifier="speaker.2.fill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s3X-Vt-hZL">
                                                <rect key="frame" x="192" y="0.0" width="40" height="40"/>
                                                <accessibility key="accessibilityConfiguration" identifier="speaker.slash.fill"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                                <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" image="speaker.slash.fill" catalog="system">
                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="font" scale="large">
                                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                    </preferredSymbolConfiguration>
...
                            <view userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SYk-sQ-070">
                                <rect key="frame" x="0.0" y="0.0" width="300" height="548"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                            </view>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ikm-HO-m2P">
                                <rect key="frame" x="20" y="144" width="280" height="280"/>
                                <accessibility key="accessibilityConfiguration" identifier="HintImage">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="ikm-HO-m2P" secondAttribute="height" multiplier="1:1" id="C9C-Rc-3G5"/>
                                </constraints>
                            </imageView>
...
